--- a/about.html
+++ b/about.html
@@ -28,7 +28,10 @@ header-img: "img/post-bg-rwd.jpg"
 
 
 </div>
-
+<div>
+<p>Thanks:</p>
+<p><a href="http://qiubaiying.top/" target="目标" title="说明">BY</a></p>
+</div>
 <!-- English Version -->
 <!-- <div class="en post-container">
     <blockquote><p>Yet another iOS Developer. <br>
