--- a/about.html
+++ b/about.html
@@ -20,7 +20,6 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>Hey，我是<strong>Gh0stsn0w</strong>，一名信息安全行业从业人员</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢看书。</p>
 
   
 
@@ -29,8 +28,9 @@ header-img: "img/post-bg-rwd.jpg"
 
 </div>
 <div>
+--------------------
 <p>Thanks:</p>
-<p><a href="http://qiubaiying.top/" target="目标" title="说明">BY</a></p>
+<a href="http://qiubaiying.top/" target="目标" title="BY">BY</a>
 </div>
 <!-- English Version -->
 <!-- <div class="en post-container">
